# Cpp-ConsoleApp-CMake-Template

./: CMakeLists.txt  README.md
Application/: CMakeLists.txt  cversion.c  main.cpp
Application/src/: cversion.c  main.cpp
cmake/presets/: linux.json  windows.json
